--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "gravatar": "^1.8.2",
+    "jimp": "^1.6.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.4",
