--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -18,7 +19,8 @@
     "mongoose": "^8.6.4",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "nodemailer": "^7.0.12"
   },
   "devDependencies": {
     "jest": "^30.2.0",
