--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "gravatar": "^1.8.2",
+    "handlebars": "^4.7.8",
     "jimp": "^1.6.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
