--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,6 @@ BASE_URL=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
-ENABLE_CLOUDINARY
+ENABLE_CLOUDINARY=
+GOOGLE_AUTH_CLIENT_ID=
+GOOGLE_AUTH_CLIENT_SECRET=
