--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^4.18.2",
+    "google-auth-library": "^10.5.0",
     "gravatar": "^1.8.2",
     "handlebars": "^4.7.8",
     "jimp": "^1.6.0",
