--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "scripts": {
     "start": "node ./server.js",
     "dev": "nodemon ./server.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
@@ -22,9 +25,12 @@
     "mongoose": "^8.6.4",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "nanoid": "^3.3.11"
+    "nanoid": "^3.3.11",
+    "styled-components": "^6.3.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@redocly/cli": "^2.14.9",
     "jest": "^30.2.0",
     "nodemon": "^3.0.2"
   }
